--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,46 @@
-node_modules
+# Node modules
+node_modules/
+npm-debug.log*
+yarn-error.log*
+
+# Next.js build output
+.next/
+out/
+build/
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Prisma
+prisma/migrations/
+*.db
+
+# Logs
+logs/
+*.log
+pids/
+*.pid
+*.seed
+*.sqlite
+
+# TypeScript
+*.tsbuildinfo
+
+# VSCode
+.vscode/
+*.code-workspace
+
+# Tailwind / PostCSS
+*.css.map
+
+# Misc
+.DS_Store
+Thumbs.db
+
+# Docker
+docker-compose.override.yml
+*.tgz
