--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,45 @@
-# Node modules
+# -----------------------
+# Node.js / JavaScript
+# -----------------------
 node_modules/
 npm-debug.log*
 yarn-error.log*
 
+# -----------------------
+# TypeScript
+# -----------------------
+tsconfig.tsbuildinfo
+*.tsbuildinfo
+
+# -----------------------
 # Next.js build output
+# -----------------------
 .next/
 out/
 build/
 
-# Environment files
+# -----------------------
+# Environment files (secrets)
+# -----------------------
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+secrets.txt   # remove this from Git
 
+# Keep example env for reference
+.env.example
+
+# -----------------------
 # Prisma
-prisma/migrations/
-*.db
+# -----------------------
+prisma/migrations/   # generated migrations
+*.db                 # local SQLite or database files
 
+# -----------------------
 # Logs
+# -----------------------
 logs/
 *.log
 pids/
@@ -27,20 +47,30 @@ pids/
 *.seed
 *.sqlite
 
-# TypeScript
-*.tsbuildinfo
-
+# -----------------------
 # VSCode
+# -----------------------
 .vscode/
 *.code-workspace
 
+# -----------------------
 # Tailwind / PostCSS
+# -----------------------
 *.css.map
 
-# Misc
+# -----------------------
+# OS files
+# -----------------------
 .DS_Store
 Thumbs.db
 
+# -----------------------
 # Docker
+# -----------------------
 docker-compose.override.yml
 *.tgz
+
+# -----------------------
+# Local / temporary files
+# -----------------------
+build.sh    # only if it contains secrets; otherwise keep it
