--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "docker-compose up -d && npx prisma generate && npx prisma db push && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -39,12 +39,14 @@
     "clsx": "^2.1.1",
     "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.1",
+    "framer-motion": "^12.26.2",
     "graphql": "^16.12.0",
     "graphql-subscriptions": "^3.0.0",
     "graphql-ws": "^6.0.6",
     "jsonwebtoken": "^9.0.3",
     "next": "^16.1.1",
     "next-auth": "^4.24.13",
+    "nodemailer": "^7.0.12",
     "postcss": "^8.5.6",
     "prisma": "^5.22.0",
     "react": "^19.2.3",
